src/objects/lms_folio_dtl__x.object
<CustomObject>
    <description>caesars$lms_folio_dtl</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$lms_folio_dtl</externalName>
    <fields>
        <fullName>c_account__c</fullName>
        <description>c_account</description>
        <externalDeveloperName>c_account</externalDeveloperName>
        <label>c_account</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c_bill_cd__c</fullName>
        <description>c_bill_cd</description>
        <externalDeveloperName>c_bill_cd</externalDeveloperName>
        <label>c_bill_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_bill_cd_desc__c</fullName>
        <description>c_bill_cd_desc</description>
        <externalDeveloperName>c_bill_cd_desc</externalDeveloperName>
        <label>c_bill_cd_desc</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c_cashier_first_name__c</fullName>
        <description>c_cashier_first_name</description>
        <externalDeveloperName>c_cashier_first_name</externalDeveloperName>
        <label>c_cashier_first_name</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c_cashier_id__c</fullName>
        <description>c_cashier_id</description>
        <externalDeveloperName>c_cashier_id</externalDeveloperName>
        <label>c_cashier_id</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_cashier_last_name__c</fullName>
        <description>c_cashier_last_name</description>
        <externalDeveloperName>c_cashier_last_name</externalDeveloperName>
        <label>c_cashier_last_name</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c_cashier_user_profile__c</fullName>
        <description>c_cashier_user_profile</description>
        <externalDeveloperName>c_cashier_user_profile</externalDeveloperName>
        <label>c_cashier_user_profile</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_cc_lead_digit_type__c</fullName>
        <description>c_cc_lead_digit_type</description>
        <externalDeveloperName>c_cc_lead_digit_type</externalDeveloperName>
        <label>c_cc_lead_digit_type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_comments__c</fullName>
        <description>c_comments</description>
        <externalDeveloperName>c_comments</externalDeveloperName>
        <label>c_comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c_compor_dept__c</fullName>
        <description>c_compor_dept</description>
        <externalDeveloperName>c_compor_dept</externalDeveloperName>
        <label>c_compor_dept</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_compor_first_name__c</fullName>
        <description>c_compor_first_name</description>
        <externalDeveloperName>c_compor_first_name</externalDeveloperName>
        <label>c_compor_first_name</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c_compor_gl_cd__c</fullName>
        <description>c_compor_gl_cd</description>
        <externalDeveloperName>c_compor_gl_cd</externalDeveloperName>
        <label>c_compor_gl_cd</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_compor_last_name__c</fullName>
        <description>c_compor_last_name</description>
        <externalDeveloperName>c_compor_last_name</externalDeveloperName>
        <label>c_compor_last_name</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c_external_ticket_nbr__c</fullName>
        <description>c_external_ticket_nbr</description>
        <externalDeveloperName>c_external_ticket_nbr</externalDeveloperName>
        <label>c_external_ticket_nbr</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c_meal_period_cd__c</fullName>
        <description>c_meal_period_cd</description>
        <externalDeveloperName>c_meal_period_cd</externalDeveloperName>
        <label>c_meal_period_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_meal_period_desc__c</fullName>
        <description>c_meal_period_desc</description>
        <externalDeveloperName>c_meal_period_desc</externalDeveloperName>
        <label>c_meal_period_desc</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <description>c_prop_cd</description>
        <externalDeveloperName>c_prop_cd</externalDeveloperName>
        <label>c_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd_fk__c</fullName>
        <description>c_prop_cd_fk</description>
        <externalDeveloperName>c_prop_cd_fk</externalDeveloperName>
        <label>c_prop_cd_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rev_center_cd__c</fullName>
        <description>c_rev_center_cd</description>
        <externalDeveloperName>c_rev_center_cd</externalDeveloperName>
        <label>c_rev_center_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_server_nbr__c</fullName>
        <description>c_server_nbr</description>
        <externalDeveloperName>c_server_nbr</externalDeveloperName>
        <label>c_server_nbr</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c_settle_method_cd__c</fullName>
        <description>c_settle_method_cd</description>
        <externalDeveloperName>c_settle_method_cd</externalDeveloperName>
        <label>c_settle_method_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_settle_method_short_desc__c</fullName>
        <description>c_settle_method_short_desc</description>
        <externalDeveloperName>c_settle_method_short_desc</externalDeveloperName>
        <label>c_settle_method_short_desc</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c_settle_method_type__c</fullName>
        <description>c_settle_method_type</description>
        <externalDeveloperName>c_settle_method_type</externalDeveloperName>
        <label>c_settle_method_type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_split_ticket_flag__c</fullName>
        <description>c_split_ticket_flag</description>
        <externalDeveloperName>c_split_ticket_flag</externalDeveloperName>
        <label>c_split_ticket_flag</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_ticket_type_cd__c</fullName>
        <description>c_ticket_type_cd</description>
        <externalDeveloperName>c_ticket_type_cd</externalDeveloperName>
        <label>c_ticket_type_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_create_ts__c</fullName>
        <description>d_create_ts</description>
        <externalDeveloperName>d_create_ts</externalDeveloperName>
        <label>d_create_ts</label>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>d_trans_dt__c</fullName>
        <description>d_trans_dt</description>
        <externalDeveloperName>d_trans_dt</externalDeveloperName>
        <label>d_trans_dt</label>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>f_folio_id__c</fullName>
        <description>f_folio_id</description>
        <externalDeveloperName>f_folio_id</externalDeveloperName>
        <label>f_folio_id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_tax_amt__c</fullName>
        <description>f_tax_amt</description>
        <externalDeveloperName>f_tax_amt</externalDeveloperName>
        <label>f_tax_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_ticket_amt__c</fullName>
        <description>f_ticket_amt</description>
        <externalDeveloperName>f_ticket_amt</externalDeveloperName>
        <label>f_ticket_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_ticket_id__c</fullName>
        <description>f_ticket_id</description>
        <externalDeveloperName>f_ticket_id</externalDeveloperName>
        <label>f_ticket_id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_tip_amt__c</fullName>
        <description>f_tip_amt</description>
        <externalDeveloperName>f_tip_amt</externalDeveloperName>
        <label>f_tip_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_cashier_emp_id__c</fullName>
        <description>i_cashier_emp_id</description>
        <externalDeveloperName>i_cashier_emp_id</externalDeveloperName>
        <label>i_cashier_emp_id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_covers__c</fullName>
        <description>i_covers</description>
        <externalDeveloperName>i_covers</externalDeveloperName>
        <label>i_covers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_invoice_number__c</fullName>
        <description>i_invoice_number</description>
        <externalDeveloperName>i_invoice_number</externalDeveloperName>
        <label>i_invoice_number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_seq_nbr__c</fullName>
        <description>i_seq_nbr</description>
        <externalDeveloperName>i_seq_nbr</externalDeveloperName>
        <label>i_seq_nbr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lms_folio_hdr_fk__c</fullName>
        <externalDeveloperName>lms_folio_hdr_fk</externalDeveloperName>
        <label>LMS Folio Hdr</label>
        <length>18</length>
        <referenceTo>lms_folio_hdr__x</referenceTo>
        <relationshipLabel>LMS Folio Dtl</relationshipLabel>
        <relationshipName>LMS_Folio_Dtl</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <label>LMS Folio Dtl</label>
    <pluralLabel>LMS Folio Dtl</pluralLabel>
</CustomObject>